# TPySA

./: .gitignore  README.md  TPSA.py  compare_plot.py  main.py  main_with_opm_simulators.py  main_with_opmio.py  main_with_pp.py  main_with_pyaction.py  pyproject.toml  requirements.txt  setup.py  test_viz.py
archive/: main_with_pp.py
data_pyaction/: action3.py
data_single_phase/: SINGLE_PHASE.DATA
docs/: Biot.md  Preconditioning_TPSA.md  Rescaling_TPSA.md  installation.md
examples/: main.py  plot_pressure.py
examples/01_cartgrid/: main.py  plot_cartgrid.py
examples/02_fault_grid/: fixed_point_iterations.py  main.py  plot_fixedpoint.py  plot_pressures.py
examples/03_norne/: main.py  plot_norne.py
examples/04_drogon/: main.py
examples/05_troll_5/: main.py
examples/06_troll_open/: main.py
examples/07_troll_full/: main.py
examples/08_analytical_biot_dec/: errs.txt  main.py  plot.py  serial_run.py  true_sol.py
examples/08_analytical_elasticity/: main.py  plot.py  true_sol.py
examples/09_analytical_biot_coup/: main.py  plot_BiCGStab_conv.py  plot_L2_conv.py  serial_run.py  true_sol.py
examples/10_norne_single_phase/: check_out_sources.py  fixed_point_iterations.py  main.py  plot_BiCGStab_conv.py  plot_fixedpoint.py
examples/11_cube_wells/: check_out_sources.py  fixed_point_iterations.py  main.py
installation/: README.md
other_examples/01_cartgrid/: main copy.py  main.py
src/: TPSA.py  __init__.py  cartgrid.py  coupler.py  couplers.py  grid.py  source_manager.py  source_stringer.py
tests/: test_9nnc.py  test_cartGrid.py
(+56 files in other folders)
